[package]
name = "solidity_thegraph"
version = "0.1.3"
authors = ["mason <zhangxiaocong_2011@yeah.net"]
edition = "2021"
categories = ["database"]

[dependencies]
#web
actix-web = "2.0"
actix-rt = "2.7.0"
#json
serde_json = "1.0.83"
#mysql
sqlx = {version="0.6.1", features = [ "runtime-tokio-rustls" ]}
#get post
reqwest = { version = "0.11.11", features = ["blocking", "json"] }

serde = "1.0.142"

[features]
